# linecook

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Justfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  test_api.py  test_print.py  types.py
.github/workflows/: build-and-push.yml
api/: __init__.py  endpoints.py
services/: __init__.py  image_processing.py  inference.py  printing.py
static/: index.html
static/css/: styles.css
static/js/: app.js
