[project]
name = "linecook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inference>=0.51.3",
    "pdf2image>=1.17.0",
    "roboflow>=1.2.3",
    "supervision>=0.26.1",
    "tqdm>=4.67.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]
